<resources>
    <string name="app_name">Food_App</string>
    <string name="add_food">Add Food</string>
    <string name="show_food">Show Food</string>
    <string name="taom_nomi">Taom nomi</string>
    <string name="kerakli_mahsulotlar">Kerakli mahsulotlar</string>
    <string name="taom_tayorlash">Taom tayorlash</string>
    <string name="add">Save</string>
    <string name="taom_tayorlash_tartibi">Taom tayorlash tartibi</string>
</resources>